Edited README.md and .env.example to contain additional environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
-# JetBrains API Configuration
 # Copy this file to .env and fill in your actual values
 
 # JetBrains API Key (required)
 JETBRAINS_API_KEY=your_api_key_here
+
+# JetBrains API Key for specific team (optional)
+JETBRAINS_API_KEY_TEAM_1=your_api_key_here
+JETBRAINS_API_KEY_TEAM_2=your_api_key_here
 
 # JetBrains Customer Code (required)
 JETBRAINS_CUSTOMER_CODE=your_customer_code_here
